@@ -1,6 +1,10 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - bugfix in graph API: node values are now compared by value,
+   not by PyObject pointer => nodes with labels greater than 256
+   are now reliably found
+
  - plugin projection_cutting now works as expected
 
 
